--- a/RazorPages/RazorPages/Pages/Categories/ListCategories.cshtml
+++ b/RazorPages/RazorPages/Pages/Categories/ListCategories.cshtml
@@ -9,19 +9,23 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var category in Model.Categories)
-            {
-                <tr>
-                    <td width="50%">@category</td>
-                    <td width="20%" align="right">
-                        <a asp-page="Edit" asp-route-category="@category" class="btn btn-primary">
-                            <i class="bi bi-pencil-square">Edit</i>
-                        </a>
-                        <a asp-page="Delete" asp-route-category="@category" class="btn btn-primary btn-danger align-content-around">
-                            <i class="bi bi-trash">Delete</i>
-                        </a>
-                    </td>
-                </tr>
+            @{
+                int i = 1;
+                @foreach (var category in Model.Categories)
+                {
+                    <tr>
+                        <td width="50%">@category</td>
+                        <td width="20%" align="right">
+                            <a asp-page="Edit" asp-route-category="@category" asp-route-postion="@i" class="btn btn-primary">
+                                <i class="bi bi-pencil-square">Edit</i>
+                            </a>
+                            <a asp-page="Delete" asp-route-category="@category" class="btn btn-primary btn-danger align-content-around">
+                                <i class="bi bi-trash">Delete</i>
+                            </a>
+                        </td>
+                    </tr>
+                    i++;
+                }
             }
         </tbody>
     </table>
