--- a/RazorPages/RazorPages/Pages/Categories/Create.cshtml
+++ b/RazorPages/RazorPages/Pages/Categories/Create.cshtml
@@ -5,7 +5,7 @@
         <div>
             <div class="mt-4">
                 <label asp-for="Category"></label>
-                <input asp-for="Category" class="form-control">
+                <input asp-for="Category" >
                 <span asp-validation-for="Category" class="text-danger"></span>
             </div>
             <br> <br>
