--- a/RazorPages/RazorPages/Pages/Recipes/Create.cshtml
+++ b/RazorPages/RazorPages/Pages/Recipes/Create.cshtml
@@ -1,33 +1,39 @@
 ﻿@page
 @model RazorPages.Pages.Recipes.CreateModel
 @{
-    <form method="post">
+    <form method="post" class="align-content-center">
         <div>
             <div class="mt-4">
                 <label asp-for="Recipe.Title"></label>
                 <input asp-for="Recipe.Title" class="form-control">
                 <span asp-validation-for="Recipe.Title" class="text-danger"></span>
             </div>
-            <br> <br>
             <div class="mt-4">
                 <label asp-for="Recipe.Ingredients"></label>
-                <input asp-for="Recipe.Ingredients" class="form-control">
+                <br>
+                <textarea name="Recipe.Ingredients" placeholder="After every ingredient press enter for new line." rows="5" cols="30"></textarea>
                 <span asp-validation-for="Recipe.Ingredients" class="text-danger"></span>
             </div>
-            <br> <br>
             <div class="mt-4">
                 <label asp-for="Recipe.Instructions"></label>
-                <input asp-for="Recipe.Instructions" class="form-control">
+                <br>
+                <textarea name="Recipe.Instructions" placeholder="After every instructions press enter for new line." rows="5" cols="30"></textarea>
                 <span asp-validation-for="Recipe.Instructions" class="text-danger"></span>
             </div>
-            <br> <br>
             <div class="mt-4">
-                <label asp-for="Recipe.Categories"></label>
-                <input asp-for="Recipe.Categories" class="form-control">
-                <span asp-validation-for="Recipe.Categories" class="text-danger"></span>
+                <form method="post">
+                    <label asp-for="Recipe.Categories">Choose one or more category:</label>
+                    <br><br>
+                    <select name="Recipe.Categories" id="cars" multiple style="color:black">
+                        @foreach (var obj in Model.Categories)
+                        {
+                            <option value=@obj>@obj</option>
+                        }
+                    </select>
+                    <p>Hold down the Ctrl (windows) or Command (Mac) button to select multiple options.</p>
+                </form>
             </div>
-            <br> <br>
-            <button type="submit" class="btn btn-primary"><i class="bi bi-check">Create</i></button>
+            <button type="submit" class="btn btn-primary"><i class="bi bi-plus-circle-fill"> Create</i></button>
         </div>
     </form>
 }
