--- a/RazorPages/RazorPages/Pages/Recipes/Edit.cshtml
+++ b/RazorPages/RazorPages/Pages/Recipes/Edit.cshtml
@@ -9,7 +9,6 @@
                 <label asp-for="Recipe.Title"></label>
                 <input asp-for="Recipe.Title">
             </div>
-            <br> <br>
             <div class="mt-4">
                 <label asp-for="Recipe.Ingredients"></label>
                 <br>
@@ -55,7 +54,7 @@
                     <p>Hold down the Ctrl (windows) or Command (Mac) button to select multiple options.</p>
                 </form>
             </div>
-            <button type="submit" class="btn btn-primary"><i class="bi bi-trash3-fill"> Edit</i></button>
+            <button type="submit" class="btn btn-primary"><i class="bi bi-pencil-square">Edit</i></button>
         </div>
     </form>
 }
