--- a/RazorPages/RazorPages/Pages/Categories/Delete.cshtml
+++ b/RazorPages/RazorPages/Pages/Categories/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model RazorPages.Pages.Categories.DeleteModel
 @{
-    <form method="post">
+    <form method="post" class="align-content-center border border-2 border-dark rounded col-4 m-auto mt-lg-5 " style="text-align:center;background-color:whitesmoke;">
         <div>
             <div class="mt-4">
                 <label asp-for="Category"></label>
