--- a/RazorPages/RazorPages/Pages/Recipes/Delete.cshtml
+++ b/RazorPages/RazorPages/Pages/Recipes/Delete.cshtml
@@ -1,38 +1,42 @@
 ﻿@page
 @model RazorPages.Pages.Recipes.DeleteModel
 @{
-    <form method="post">
+    <form method="post" class="align-content-center border border-2 border-dark rounded col-6 mt-2 " style="margin:auto;text-align:center;background-color:lightgrey;">
         <div>
             <div class="mt-4">
                 <label asp-for="Recipe.Title"></label>
+                <br>
                 <input asp-for="Recipe.Title" disabled>
             </div>
-            <br> <br>
             <div class="mt-4">
                 <label asp-for=Recipe.Ingredients></label>
+                <br>
                 @foreach (var obj in @Model.Recipe.Ingredients)
                 {
                     <input asp-for=@obj disabled>
+                    <br>
                 }
             </div>
-            <br> <br>
             <div class="mt-4">
                 <label asp-for=Recipe.Instructions></label>
+                <br>
                 @foreach (var obj in @Model.Recipe.Instructions)
                 {
-                    <input asp-for=@obj disabled >
+                    <input asp-for=@obj disabled>
+                    <br>
                 }
             </div>
-            <br> <br>
             <div class="mt-4">
                 <label asp-for=Recipe.Categories></label>
+                <br>
                 @foreach (var obj in @Model.Recipe.Categories)
                 {
-                    <input asp-for=@obj disabled >
+                    <input asp-for=@obj disabled>
+                    <br>
                 }
             </div>
-            <br> <br>
-            <button type="submit" class="btn btn-danger"><i class="bi bi-trash3-fill">Delete</i></button>
+            <br>
+            <button type="submit" class="btn btn-outline-danger"><i class="bi bi-trash3-fill">Delete</i></button>
         </div>
     </form>
 }
