--- a/RazorPages/RazorPages/Pages/Recipes/Edit.cshtml
+++ b/RazorPages/RazorPages/Pages/Recipes/Edit.cshtml
@@ -1,60 +1,61 @@
 ﻿@page
 @model RazorPages.Pages.Recipes.EditModel
 @{
-    <form method="post">
-        <div>
-            <label asp-for="Recipe.Id" hidden></label>
-            <input asp-for="Recipe.Id" hidden>
-            <div class="mt-4">
-                <label asp-for="Recipe.Title"></label>
-                <input asp-for="Recipe.Title">
-            </div>
-            <div class="mt-4">
-                <label asp-for="Recipe.Ingredients"></label>
-                <br>
-                <textarea name="Recipe.Ingredients" placeholder="After every ingredient press enter for new line." rows="5" cols="30">@foreach (var obj in Model.Recipe.Ingredients)
+    <form method="post" class="align-content-center border border-2 border-dark rounded col-6 mt-2 " style="margin:auto;text-align:center;background-color:lightgrey;">
+            <div>
+                <label asp-for="Recipe.Id" hidden></label>
+                <input asp-for="Recipe.Id" hidden>
+                <div class="mt-4 col-4 m-auto">
+                    <label asp-for="Recipe.Title"></label>
+                    <input asp-for="Recipe.Title">
+                </div>
+                <div class="mt-4">
+                    <label asp-for="Recipe.Ingredients"></label>
+                    <br>
+                    <textarea name="Recipe.Ingredients" placeholder="After every ingredient press enter for new line." rows="4" cols="30">@foreach (var obj in Model.Recipe.Ingredients)
                     {
                         if (obj != Model.Recipe.Ingredients.Last())
-                            @obj.Insert(obj.Length,"\r\n")
+                                @obj.Insert(obj.Length,"\r\n")
                         else
-                            @obj                    }</textarea>
-                <span asp-validation-for="Recipe.Ingredients" class="text-danger"></span>
-            </div>
-            <div class="mt-4">
-                <label asp-for="Recipe.Instructions"></label>
-                <br>
-                <textarea name="Recipe.Instructions" placeholder="After every instructions press enter for new line." rows="5" cols="30">@foreach (var obj in Model.Recipe.Instructions)
+                                @obj
+                    }</textarea>
+                    <span asp-validation-for="Recipe.Ingredients" class="text-danger"></span>
+                </div>
+                <div class="mt-4">
+                    <label asp-for="Recipe.Instructions"></label>
+                    <br>
+                    <textarea name="Recipe.Instructions" placeholder="After every instructions press enter for new line." rows="4" cols="30">@foreach (var obj in Model.Recipe.Instructions)
                     {
                         if (obj != Model.Recipe.Instructions.Last())
-                            @obj.Insert(obj.Length,"\r\n")
+                                @obj.Insert(obj.Length,"\r\n")
                         else
-                            @obj
+                                @obj
                     }</textarea>
-                <span asp-validation-for="Recipe.Instructions" class="text-danger"></span>
-            </div>
-            <div class="mt-4">
-                Old Categories:
-                @foreach (var obj in @Model.Recipe.Categories)
+                    <span asp-validation-for="Recipe.Instructions" class="text-danger"></span>
+                </div>
+                <div class="mt-4 text-dark">
+                    Old Categories:
+                    @foreach (var obj in @Model.Recipe.Categories)
                 {
-                    @obj.Insert(obj.Length,"  ")
+                        @obj.Insert(obj.Length,"  ")
                 }
-                <br>
-                <span class="text-danger">All old categories will be deleted!<br> Please select new ones.</span>
-            </div>
-            <div class="mt-4">
-                <form method="post">
-                    <label asp-for="Recipe.Categories">Choose one or more new category:</label>
-                    <br><br>
-                    <select name="Recipe.Categories" id="cars" multiple style="color:black">
-                        @foreach (var obj in Model.Categories)
+                    <br>
+                    <span class="text-danger" style="font-size:x-large">All old categories will be deleted!<br> Please select new ones.</span>
+                </div>
+                <div class="mt-4">
+                    <form method="post">
+                        <label asp-for="Recipe.Categories">Choose one or more new category:</label>
+                        <br>
+                        <select name="Recipe.Categories" id="cars" multiple style="color:black">
+                            @foreach (var obj in Model.Categories)
                         {
-                            <option value=@obj>@obj</option>
+                                <option value=@obj>@obj</option>
                         }
-                    </select>
-                    <p>Hold down the Ctrl (windows) or Command (Mac) button to select multiple options.</p>
-                </form>
+                        </select>
+                        <p>Hold down the Ctrl (windows) or Command (Mac) button to select multiple options.</p>
+                    </form>
+                </div>
+                <button type="submit" class="btn btn-outline-success"><i class="bi bi-pencil-square">Edit</i></button>
             </div>
-            <button type="submit" class="btn btn-primary"><i class="bi bi-pencil-square">Edit</i></button>
-        </div>
     </form>
 }
