--- a/RazorPages/RazorPages/Pages/Categories/Edit.cshtml
+++ b/RazorPages/RazorPages/Pages/Categories/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model RazorPages.Pages.Categories.EditModel
 @{
-    <form method="post" class="align-content-center border border-2 border-dark rounded col-4 m-auto mt-lg-5 " style="text-align:center;background-color:whitesmoke;">
+    <form method="post" class="align-content-center border border-1 border-dark rounded col-4 m-auto mt-lg-5 " style="text-align:center;background-color:lightgrey;">
         <div>
             <div class="mt-4">
                 <label asp-for=Category></label>
