--- a/RazorPages/RazorPages/wwwroot/css/Theme.css
+++ b/RazorPages/RazorPages/wwwroot/css/Theme.css
@@ -12926,7 +12926,5 @@ pre {
 }
 
 * {
-    font-family: 'Cabin Sketch', cursive;
-    font-weight:bolder;
-    font-size: large;
+    font-family: 'Mochiy Pop One', sans-serif;
 }
