--- a/RazorPages/RazorPages/Pages/Home.cshtml
+++ b/RazorPages/RazorPages/Pages/Home.cshtml
@@ -1,10 +1,15 @@
 ﻿@page
 @model RazorPages.Pages.HomeModel
 @{
-    <body background="Food.jpg" class="bg"></body>
     <div class="bgimg-1 w3-display-container w3-opacity-min divCenter" id="home">
-        <div class="w3-display-middle divCenter" style="white-space:nowrap;">
-            <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Welcome <span class="w3-hide-small">in</span> Exercise-3</span>
-        </div>
+            <div class="w3-display-middle divCenter" style="white-space:nowrap;">
+                <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Welcome <span class="w3-hide-small">in</span> Yum City </span>
+            </div>
     </div>
+    <div class="bgimg-1 w3-display-container w3-opacity-min divCenter " id="home">
+            <div class="w3-display-middle divCenter" style="white-space:nowrap;margin-top: 150px;">
+                <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">Where you <span class="w3-hide-small">will know</span> all about cooking</span>
+            </div>
+    </div>
+
 }
