--- a/RazorPages/RazorPages/Pages/Shared/_Layout.cshtml
+++ b/RazorPages/RazorPages/Pages/Shared/_Layout.cshtml
@@ -12,7 +12,8 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cabin+Sketch:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="sweetalert2.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
@@ -22,16 +23,16 @@
                 <div class="collapse navbar-collapse" id="navbarColor03">
                     <ul class="navbar-nav me-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" href="/Home" style="font-size:x-large;">
+                            <a class="nav-link active" href="/Home" style="font-size:large;">
                                 Home
                                 <span class="visually-hidden">(current)</span>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-size:x-large;" asp-area="" asp-page="/Categories/ListCategories">Categories</a>
+                            <a class="nav-link text-dark" style="font-size:large;" asp-area="" asp-page="/Categories/ListCategories">Categories</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-size:x-large;" asp-area="" asp-page="/Recipes/ListRecipes">Recipes</a>
+                            <a class="nav-link text-dark" style="font-size:large;" asp-area="" asp-page="/Recipes/ListRecipes">Recipes</a>
                         </li>
                     </ul>
                 </div>
@@ -50,6 +51,8 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="sweetalert2.all.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
