--- a/RazorPages/RazorPages/Pages/_ViewImports.cshtml
+++ b/RazorPages/RazorPages/Pages/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using RazorPages
 @namespace RazorPages.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using CurrieTechnologies.Razor.SweetAlert2
