--- a/RazorPages/RazorPages/Pages/Recipes/Create.cshtml
+++ b/RazorPages/RazorPages/Pages/Recipes/Create.cshtml
@@ -1,9 +1,22 @@
 ﻿@page
 @model RazorPages.Pages.Recipes.CreateModel
+@if (@Model.Msg != null)
+{
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    if (@Model.Status == "error")
+    {
+        <script type="text/javascript">
+            Swal.fire({
+                icon: 'error',
+                title: '@Model.Msg',
+                showConfirmButton: true,
+            })
+        </script>
+    }
+}
 @{
     <br />
     <form method="post" class="align-content-center border border-1 border-dark rounded col-6 " style="margin:auto;text-align:center;background-color:lightgrey;">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div>
             <div class="mt-4 col-4 m-auto">
                 <label asp-for="Recipe.Title" class="fw-bold"></label>
@@ -33,6 +46,7 @@
                         }
                     </select>
                     <p>Hold down the Ctrl (windows) or Command (Mac) button to select multiple options.</p>
+                    <span asp-validation-for="Recipe.Categories" class="text-danger"></span>
                 </form>
             </div>
             <button type="submit" class="btn btn-outline-success"><i class="bi bi-plus-circle-fill"> Create</i></button>
