--- a/RazorPages/RazorPages/Pages/Categories/Delete.cshtml
+++ b/RazorPages/RazorPages/Pages/Categories/Delete.cshtml
@@ -1,30 +1,30 @@
 ﻿@page
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script type="text/javascript">
-        Swal.fire({
-            title: 'Are you sure?',
-            text: "You won't be able to revert this!",
-            icon: 'warning',
-            showCancelButton: true,
-            confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: 'Yes, delete it!'
-        }).then((result) => {
-            if (result.isConfirmed) {
-                Swal.fire(
-                    'Good To go!',
-                    'You can delete it now!'
-                )
-                document.getElementById("isWorking").disabled = false;
-            }
-        })
+    Swal.fire({
+        title: 'Are you sure?',
+        text: "You won't be able to revert this!",
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Yes, delete it!'
+    }).then((result) => {
+        if (result.isConfirmed) {
+            Swal.fire(
+                'Good To go!',
+                'You can delete it now!'
+            )
+            document.getElementById("isWorking").disabled = false;
+        }
+    })
 </script>
 @model RazorPages.Pages.Categories.DeleteModel
 @{
-    <form method="post" class="align-content-center border border-1 border-dark rounded col-4 m-auto mt-lg-5 " style="text-align:center;background-color:lightgrey;">
-        <div>
+    <form method="post" class="align-content-center col-6 " style="margin:auto;text-align:center;margin-top:50px;color:#1A2238">
+        <div class="text-center" style="margin-top:25%;margin-right:50px;">
             <div class="mt-4">
-                <label asp-for="Category"></label>
+                <label style="font-weight:bolder;text-align:left;font-size:large" asp-for="Category"></label>:
                 <input asp-for="Category" disabled>
             </div>
             <br> <br>
