--- a/RazorPages/RazorPages/Pages/Recipes/Delete.cshtml
+++ b/RazorPages/RazorPages/Pages/Recipes/Delete.cshtml
@@ -2,61 +2,57 @@
 @model RazorPages.Pages.Recipes.DeleteModel
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script type="text/javascript">
-        Swal.fire({
-            title: 'Are you sure?',
-            text: "You won't be able to revert this!",
-            icon: 'warning',
-            showCancelButton: true,
-            confirmButtonColor: '#3085d6',
-            cancelButtonColor: '#d33',
-            confirmButtonText: 'Yes, delete it!'
-        }).then((result) => {
-            if (result.isConfirmed) {
-                Swal.fire(
-                    'Good To go!',
-                    'You can delete it now!'
-                )
-                document.getElementById("isWorking").disabled = false;
-            }
-        })
+    Swal.fire({
+        title: 'Are you sure?',
+        text: "You won't be able to revert this!",
+        icon: 'warning',
+        showCancelButton: true,
+        confirmButtonColor: '#3085d6',
+        cancelButtonColor: '#d33',
+        confirmButtonText: 'Yes, delete it!'
+    }).then((result) => {
+        if (result.isConfirmed) {
+            Swal.fire(
+                'Good To go!',
+                'You can delete it now!'
+            )
+            document.getElementById("isWorking").disabled = false;
+        }
+    })
 </script>
 @{
-    <form method="post" class="align-content-center border border-1 border-dark rounded col-6 mt-2 " style="margin:auto;text-align:center;background-color:lightgrey;">
-                <div>
-                    <div class="mt-4">
-                        <label asp-for="Recipe.Title"></label>
-                        <br>
-                        <input asp-for="Recipe.Title" disabled>
-                    </div>
-                    <div class="mt-4">
-                        <label asp-for=Recipe.Ingredients></label>
-                        <br>
-                        @foreach (var obj in @Model.Recipe.Ingredients)
+    <form method="post" class="align-content-center col-6 " style="margin:auto;text-align:center;margin-top:50px;color:#1A2238">
+        <div>
+            <div class="row mt-4 col-11 m-auto">
+                <label style="text-align:left;font-weight:bold;font-size:large" asp-for="Recipe.Title"></label>
+                <input asp-for="Recipe.Title" disabled>
+            </div>
+            <div class="row mt-4 col-11 m-auto">
+                <label style="font:bolder;text-align:left" asp-for="Recipe.Ingredients" class="fw-bold"></label>
+                @foreach (var obj in @Model.Recipe.Ingredients)
                 {
-                            <input asp-for=@obj disabled>
-                            <br>
-                }
-                    </div>
-                    <div class="mt-4">
-                        <label asp-for=Recipe.Instructions></label>
-                        <br>
-                        @foreach (var obj in @Model.Recipe.Instructions)
-                {
-                            <input asp-for=@obj disabled class="col-8">
-                            <br>
-                }
-                    </div>
-                    <div class="mt-4">
-                        <label asp-for=Recipe.Categories></label>
-                        <br>
-                        @foreach (var obj in @Model.Recipe.Categories)
-                {
-                            <input asp-for=@obj disabled>
-                            <br>
-                }
-                    </div>
+                    <input asp-for=@obj disabled>
                     <br>
-                    <button id="isWorking" type="submit" class="btn btn-outline-danger" disabled><i class="bi bi-trash3-fill">Delete</i></button>
-                </div>
+                }
+            </div>
+            <div class="row mt-4 col-11 m-auto">
+                <label style="text-align:left;font-weight:bold;font-size:large" asp-for="Recipe.Instructions" class="fw-bold"></label>
+                @foreach (var obj in @Model.Recipe.Instructions)
+                {
+                    <input asp-for=@obj disabled>
+                    <br>
+                }
+            </div>
+            <div class="row mt-4 col-11 m-auto">
+                <label style="text-align:left;font-weight:bold;font-size:large"  asp-for="Recipe.Categories" class="fw-bold">Choose one or more category</label>
+                @foreach (var obj in @Model.Recipe.Categories)
+                {
+                    <input asp-for=@obj disabled>
+                    <br>
+                }
+            </div>
+            <br>
+            <button id="isWorking" type="submit" class="btn btn-danger" disabled><i class="bi bi-trash3-fill">Delete</i></button>
+        </div>
     </form>
 }
