--- a/RazorPages/RazorPages/Pages/Shared/_Layout.cshtml
+++ b/RazorPages/RazorPages/Pages/Shared/_Layout.cshtml
@@ -12,27 +12,29 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Wendy+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="sweetalert2.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg" style="height:60px; background-color: #1A2238">
             <div class="container-fluid">
                 <div class="collapse navbar-collapse" id="navbarColor03">
                     <ul class="navbar-nav me-auto">
-                        <li class="nav-item">
-                            <a class="nav-link active" href="/Home" style="font-size:large;">
-                                Home
-                                <span class="visually-hidden">(current)</span>
-                            </a>
+                        <li style="margin-left:25px;margin-top:20px;">
+                            <div class="logo-holder logo-5">
+                                <a class="nav-link text-light" asp-page="/Home">
+                                    <h3>Yum</h3>
+                                    <p>City</p>
+                                </a>
+                            </div>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-size:large;" asp-area="" asp-page="/Categories/ListCategories">Categories</a>
+                        <li class="nav-item" style="margin-left:1050px;margin-top:25px;">
+                            <a class="nav-link text-light" style="font-size:x-large;" asp-area="" asp-page="/Categories/ListCategories">Categories</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" style="font-size:large;" asp-area="" asp-page="/Recipes/ListRecipes">Recipes</a>
+                        <li class="nav-item" style="margin-left:50px;margin-top:25px;">
+                            <a class="nav-link text-light" style="font-size:x-large;" asp-area="" asp-page="/Recipes/ListRecipes">Recipes</a>
                         </li>
                     </ul>
                 </div>
@@ -43,7 +45,7 @@
         <main role="main" class="pb-3">
             <body class="bg"
                   style="background-image:url('../bg.jpg') ;
-                        height: 100vh">
+                            height: 100vh">
             </body>
             @RenderBody()
         </main>
@@ -53,8 +55,6 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/BackGroundChanger.js"></script>
     <script src="sweetalert2.all.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
