--- a/RazorPages/RazorPages/wwwroot/css/StyleSheet.css
+++ b/RazorPages/RazorPages/wwwroot/css/StyleSheet.css
@@ -12,3 +12,30 @@
     margin-top: 50px;
     margin-left: -425px;
 }
+
+.logo-holder {
+    text-align: center;
+}
+
+.logo-5 h3 {
+    color: white;
+    font-weight: 300;
+    font-size: 40px;
+    line-height: 0.6;
+    font-family: 'Bangers', cursive;
+    letter-spacing: 5px;
+}
+
+.logo-5 p {
+    font-size: 14px;
+    margin-left: 0;
+    color:#FF6A3D;
+    font-size: large;
+    font-weight: 400;
+    text-transform: capitalize;
+    font-style: italic;
+    font-family: 'Mansalva', cursive;
+    position: relative;
+}
+
+
