--- a/RazorPages/RazorPages/Pages/Recipes/Create.cshtml
+++ b/RazorPages/RazorPages/Pages/Recipes/Create.cshtml
@@ -16,7 +16,7 @@
 }
 @{
     <br />
-    <body style="background-color:#1A2238;">
+    <body style="background-color:#252f3e;">
     </body>
     <form method="post" class="align-content-center col-6 " style="margin:auto;text-align:center;margin-top:50px;color:#1A2238">
         <div>
