--- a/RazorPages/RazorPages/Pages/Categories/ListCategories.cshtml
+++ b/RazorPages/RazorPages/Pages/Categories/ListCategories.cshtml
@@ -48,7 +48,7 @@
             i++;
         }
     </div>
-    <div class="text-end">
+    <div class="text-center">
             <a asp-page="Create" class="btn" style="background-color:#1A2238;color:#FF6A3D;font-weight:bold;margin-top:25px;"><i class="bi bi-plus-square"> Create new category</i></a>
     </div>
 }
